tests-integration/tests/roundtrip/invalid/semantic/duplicate_var_declaration/01/duplicate_var_declaration_01.essence
find x, x : int
find x : bool
such that x = 1